# rpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build_rpc_library.sh  conanfile.py
include/: BlockingQueue.h  ICommunicationClient.h  IDiscoveryService.h  TCPClient.h  UDPClient.h  constants.h  librpc.h  mDNSDiscoveryService.h  mDNSRobotModule.h
include/flatbuffers/: CallBuilder.h  MPIMessageBuilder.h  SerializedMessage.h
include/flatbuffers_generated/: MPIMessage_generated.h  ReturnCall_generated.h  RobotModule_generated.h  SendCall_generated.h
include/util/: ip.h  log.h  string.h
src/: CallBuilder.cpp  MPIMessageBuilder.cpp  TCPClient.cpp  UDPClient.cpp  librpc.cpp  mDNSDiscoveryService.cpp
